versioned_docs/version-2.1.1/product/core.md
# 功能概览

FluxMQ支持的具体功能列表。
| 功能 | 说明 | 是否支持               |
| --- | --- |--------------------|
| 集群功能 | 支持MQTT集群 | :heavy_check_mark: |
| 高可用 | 支持MQTT高可用 | :heavy_check_mark: |
| 发布订阅 | 支持标准发布订阅 | :heavy_check_mark: |
| 共享订阅 | 支持分组订阅 | :heavy_check_mark: |
| 延迟消息 | 支持批量延迟消息 | :heavy_check_mark: |
| 保留消息 | 支持topic保留消息 | :heavy_check_mark: |
| SESSION会话 | 支持Broker会话存储 | :heavy_check_mark: |
| 服务等级 | QoS0，1，2 | :heavy_check_mark: |
| ACL | 控制客户端发布订阅权限 | :heavy_check_mark: |
| 流量控制 | 限制Broker接入流量 | :heavy_check_mark: |
| MQTT/MQTTS/WS协议 | 多协议支持 | :heavy_check_mark: |
| 管理页面-连接管理 | 管理客户端状态，上下线 | :heavy_check_mark: |
| 管理页面-ACL | 访问授权 | :heavy_check_mark: |
| 管理页面-订阅查询 | 查看设备订阅Topic | :heavy_check_mark: |
| 管理页面-规则引擎 | 转发消息 | :heavy_check_mark: |
| 管理页面-云客户端 | 基于ws进行模拟测试 | :heavy_check_mark: |
| 管理页面-动态认证 | 连接认证 | :heavy_check_mark: |
| 管理页面-日志管理 | 标准接入日志 | :heavy_check_mark: |
| 管理页面-监控管理 | grafana监控方案 | :heavy_check_mark: |
| 管理页面-数据源管理 | 多数据源 | :heavy_check_mark: |
| 管理页面-告警功能 | 支持钉钉、微信、飞书 | :heavy_check_mark: |
| 管理页面-协议解析 | 支持脚本解析处理payload | :heavy_check_mark: |
| 离线消息存储 | 支持QoS1/2消息离线存储和自动投递 | :heavy_check_mark: |
| 规则引擎增强 | 新增30+内置函数，支持更多数据源 | :heavy_check_mark: |
| 性能监控 | 规则引擎性能监控和优化 | :heavy_check_mark: |
